# gengetopt

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  MakefileBP  README  configure  configure.ac  fileops.c  fileops.h  firstrun.c  gengo.1  gengo.c  getoptions.c  getoptions.h  getoptionsBP.c  getoptionsBP.h  mainBP.c  sample.c
